# DoorBirdPico

./: README.md
hardware/: .gitignore  DoorBirdPico.kicad_pcb  DoorBirdPico.pro  DoorBirdPico.sch  fp-lib-table  sym-lib-table
hardware/lib_includes/: WAGO 250.lib
hardware/lib_includes/footprints.pretty/: 250-202.kicad_mod  250-204.kicad_mod
software/: CMakeLists.txt  README.md  doorbirdpico.c
software/src/: .gitignore  CMakeLists.txt  doorbirdpico.c  doorbirdpico.h
